# kokkos-profiling-example

./: .gitmodules  CMakeLists.txt  ReadMe.md
cmake/: ConfigureKokkos.cmake  utils.cmake
doc/gfx/: modules.plantuml
src/: main.cpp
